--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
     <div class="navcontainer">
         <header class="header">
             <div class="content">Header Content</div>
+            <nav class="nav">
+                <ul>
+                    <li>Home</li>
+                    <li>Projects</li>
+                    <li>Services</li>
+                    <li>Contact Us</li>
+                </ul>
+            </nav>
         </header>
+        <main class="main">Main Content</main>
+        <aside class="aside">Aside Content</aside>
+        <footer class="footer">Footer Content</footer>
     </div>
 </body>
 </html>
