--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eric Ferreira WDD131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
@@ -12,10 +12,10 @@
             <div class="content">Header Content</div>
             <nav class="nav">
                 <ul>
-                    <li>Home</li>
-                    <li>Projects</li>
-                    <li>Services</li>
-                    <li>Contact Us</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
