--- a/week01/index.html
+++ b/week01/index.html
@@ -24,9 +24,13 @@
             </nav>
         </header>
         <main class="main">
-            <section class="card"><h2>test</h2></section>
+            <h1 class="aboutme">About me</h1>
+            <div class="first-card">
+                <section class="card"><h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn new things! PS:I have a beard in this image it's an old picture of me 🤪</h3></section>
+                <img src="images/file.png"/>
+                
+            </div>
             <section class="card">text</section>
-
         </main>
         <aside class="aside">Aside Content</aside>
         <footer class="footer">Footer Content</footer>
