--- a/week01/index.html
+++ b/week01/index.html
@@ -26,8 +26,12 @@
         <main class="main">
             <h1 class="aboutme">About me</h1>
             <div class="first-card">
-                <section class="card"><h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn new things! PS:I have a beard in this image it's an old picture of me 🤪</h3></section>
-                <img src="images/file.png"/>
+                <div class="welcome-text">
+                    <section class="card"><h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn new things! PS:I have a beard in this image it's an old picture of me 🤪</h3></section>
+                </div>
+                <div class="profile">
+                    <img class="profile-image" src="images/file.png"/>
+                </div>
                 
             </div>
             <section class="card">text</section>
