--- a/week01/index.html
+++ b/week01/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="navcontainer">
         <header class="header">
-            <div class="content"><h1>WDD 131: Dynamic Web Fundamentals - Eric Rafael C. Ferreira</h1></div>
+            <div class="content">
+                <h1>WDD 131: Dynamic Web Fundamentals - Eric Rafael C. Ferreira</h1>
+            </div>
             <nav class="nav">
                 <ul>
                     <li><a href="#">LinkedIn</a></li>
@@ -27,14 +29,31 @@
             <h1 class="aboutme">About me</h1>
             <div class="first-card">
                 <div class="welcome-text">
-                    <section class="card"><h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn new things! PS:I have a beard in this image it's an old picture of me 🤪</h3></section>
+                    <section class="card">
+                        <h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm
+                            currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn
+                            new things! PS: (I have a beard in this image it's an old picture of me) 🤪</h3>
+                    </section>
                 </div>
                 <div class="profile">
-                    <img class="profile-image" src="images/file.png"/>
+                    <img class="profile-image" src="images/file.png" />
                 </div>
-                
+
             </div>
-            <section class="card">text</section>
+            <h1 class="page-break">Where I live</h1>
+            <div class="second-card">
+                <section class="card">
+                    <h3>São Paulo is the capital of the state of São Paulo, as well as the most populous city in Brazil,
+                        the Americas, and both the Western and Southern Hemisphere. Listed by the Globalization and
+                        World Cities Research Network (GaWC) as an alpha global city, it exerts substantial
+                        international influence in commerce, finance, arts, and entertainment.</h3>
+                </section>
+                <div class="flag-container">
+                <h2 class="city-name">São Paulo - SP, Brazil</h2>
+                <img class="flag-image" src="images/sp.jpg" />
+                <p><i>Official Flag of São Paulo City</i></p>
+                </div>
+            </div>
         </main>
         <aside class="aside">Aside Content</aside>
         <footer class="footer">Footer Content</footer>
