--- a/week01/index.html
+++ b/week01/index.html
@@ -55,7 +55,20 @@
                 </div>
             </div>
         </main>
-        <aside class="aside">Aside Content</aside>
+        <aside class="aside">
+            <div class="books-div">
+            <h3>Favorite Books</h3>
+            <ul class="favorite-books">
+                <li>The Brothers Karamazov</li>
+                <li>Demons</li>
+                <li>Diary of a Country Priest</li>
+                <li>The Book of Mormon</li>
+                <li>Timaeus</li>
+            </ul>
+            <img class="timaeus" src="images/timaeus.jpg"/>
+            </div>
+        
+        </aside>
         <footer class="footer">Footer Content</footer>
     </div>
 </body>
