finishing html and css

--- a/week01/index.html
+++ b/week01/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Eric Ferreira</title>
+    <script src="scripts/getdates.js" defer></script>
     <description>WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131</description>
     <link rel="stylesheet" href="styles/base.css">
     <author>Eric Ferreira</author>
@@ -18,10 +19,10 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Canvas</a></li>
-                    <li><a href="#">Scripture</a></li>
-                    <li><a href="#">Final Project</a></li>
+                    <li><a href="linkedin.com"><b>LinkedIn</a></b></li>
+                    <li><a href="https://byupw.instructure.com/about/40214"><b>Canvas</a></b></li>
+                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/gen/1?lang=eng&id=p4#p4"><b>Scripture</b></a></li>
+                    <li><a href="#"><b>Final Project</b></a></li>
                 </ul>
             </nav>
         </header>
@@ -59,17 +60,17 @@
             <div class="books-div">
             <h3>Favorite Books</h3>
             <ul class="favorite-books">
-                <li>The Brothers Karamazov</li>
-                <li>Demons</li>
-                <li>Diary of a Country Priest</li>
-                <li>The Book of Mormon</li>
-                <li>Timaeus</li>
+                <li><b>The Brothers Karamazov</b></li>
+                <li><b>Demons</b></li>
+                <li><b>Diary of a Country Priest</b></li>
+                <li><b>The Book of Mormon</b></li>
+                <li><b>Timaeus</b></li>
             </ul>
             <img class="timaeus" src="images/timaeus.jpg"/>
             </div>
         
         </aside>
-        <footer class="footer">Footer Content</footer>
+        <footer class="footer">©<span id="currentyear"></span> Eric Rafael Calado Ferreira - Brazil</footer>
     </div>
 </body>
 
