--- a/week01/index.html
+++ b/week01/index.html
@@ -21,7 +21,9 @@
                 <ul>
                     <li><a href="linkedin.com"><b>LinkedIn</a></b></li>
                     <li><a href="https://byupw.instructure.com/about/40214"><b>Canvas</a></b></li>
-                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/gen/1?lang=eng&id=p4#p4"><b>Scripture</b></a></li>
+                    <li><a
+                            href="https://www.churchofjesuschrist.org/study/scriptures/ot/gen/1?lang=eng&id=p4#p4"><b>Scripture</b></a>
+                    </li>
                     <li><a href="#"><b>Final Project</b></a></li>
                 </ul>
             </nav>
@@ -50,27 +52,29 @@
                         international influence in commerce, finance, arts, and entertainment.</h3>
                 </section>
                 <div class="flag-container">
-                <h2 class="city-name">São Paulo - SP, Brazil</h2>
-                <img class="flag-image" src="images/sp.jpg" />
-                <p><i>Official Flag of São Paulo City</i></p>
+                    <h2 class="city-name">São Paulo - SP, Brazil</h2>
+                    <img class="flag-image" src="images/sp.jpg" />
+                    <p><i>Official Flag of São Paulo City</i></p>
                 </div>
             </div>
         </main>
         <aside class="aside">
             <div class="books-div">
-            <h3>Favorite Books</h3>
-            <ul class="favorite-books">
-                <li><b>The Brothers Karamazov</b></li>
-                <li><b>Demons</b></li>
-                <li><b>Diary of a Country Priest</b></li>
-                <li><b>The Book of Mormon</b></li>
-                <li><b>Timaeus</b></li>
-            </ul>
-            <img class="timaeus" src="images/timaeus.jpg"/>
+                <h3>Favorite Books</h3>
+                <ul class="favorite-books">
+                    <li><b>The Brothers Karamazov</b></li>
+                    <li><b>Demons</b></li>
+                    <li><b>Diary of a Country Priest</b></li>
+                    <li><b>The Book of Mormon</b></li>
+                    <li><b>Timaeus</b></li>
+                </ul>
+                <img class="timaeus" src="images/timaeus.jpg" />
             </div>
-        
+
         </aside>
-        <footer class="footer">©<span id="currentyear"></span> Eric Rafael Calado Ferreira - Brazil</footer>
+        <footer class="footer"><p>©<span id="currentyear"></span> Eric Rafael Calado Ferreira - Brazil
+        <p>Last Modification<span id="modification"></span></p>
+        </footer>
     </div>
 </body>
 
