--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -21,7 +21,7 @@
         </header>
         <main class="main">Main Content</main>
         <aside class="aside">Aside Content</aside>
-        <footer class="footer"><p>© 2025</p></footer>
+        <footer class="footer"><p>Footer Content</p></footer>
     </div>
 </body>
 </html>
