--- a/week01/index.html
+++ b/week01/index.html
@@ -33,27 +33,27 @@
             <div class="first-card">
                 <div class="welcome-text">
                     <section class="card">
-                        <h3>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm
+                        <h2>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm
                             currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn
-                            new things! PS: (I have a beard in this image it's an old picture of me) 🤪</h3>
+                            new things! PS: (I have a beard in this image it's an old picture of me) 🤪</h2>
                     </section>
                 </div>
                 <div class="profile">
-                    <img class="profile-image" src="images/file.png" />
+                    <img class="profile-image" src="images/file.png" alt="profile-pic" />
                 </div>
 
             </div>
             <h1 class="page-break">Where I live</h1>
             <div class="second-card">
                 <section class="card">
-                    <h3>São Paulo is the capital of the state of São Paulo, as well as the most populous city in Brazil,
+                    <h2>São Paulo is the capital of the state of São Paulo, as well as the most populous city in Brazil,
                         the Americas, and both the Western and Southern Hemisphere. Listed by the Globalization and
                         World Cities Research Network (GaWC) as an alpha global city, it exerts substantial
-                        international influence in commerce, finance, arts, and entertainment.</h3>
+                        international influence in commerce, finance, arts, and entertainment.</h2>
                 </section>
                 <div class="flag-container">
                     <h2 class="city-name">São Paulo - SP, Brazil</h2>
-                    <img class="flag-image" src="images/sp.jpg" />
+                    <img class="flag-image" src="images/sp.jpg" alt="sp-flag" />
                     <p><i>Official Flag of São Paulo City</i></p>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <li><b>The Book of Mormon</b></li>
                     <li><b>Timaeus</b></li>
                 </ul>
-                <img class="timaeus" src="images/timaeus.jpg" />
+                <img class="timaeus" src="images/timaeus.jpg" alt="timaeus-book" />
             </div>
 
         </aside>
