--- a/week01/index.html
+++ b/week01/index.html
@@ -34,7 +34,7 @@
                 <div class="welcome-text">
                     <section class="card">
                         <h2>My name is Eric, I was born in Brasília - DF in Brazil, but now I live in São Paulo, I'm
-                            currently pursuing a degree in Software Development via BYU-Pathway, I love to read an learn
+                            currently pursuing a degree in Software Development via BYU-Pathway, I love to read and learn
                             new things! PS: (I have a beard in this image it's an old picture of me) 🤪</h2>
                     </section>
                 </div>
