--- a/week02/temples.html
+++ b/week02/temples.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="nav">
+        <nav class="navbar">
             <div class="brand">Temple Album</div>
             <div class="nav-links">
                 <a href="#">Home</a>
@@ -23,10 +23,13 @@
         </nav>
     </header>
     <main>
+        <h1 class="heading-element">Home</h1>
+        <div class="album">
 
+        </div>
     </main>
-    <footer>
-
+    <footer class="footer"><p>©<span id="currentyear"></span> Eric Rafael Calado Ferreira - Brazil
+        <p>Last Modification <span id="modification"></span></p>
     </footer>
 </body>
 
