added images, changed color schema

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -25,10 +28,46 @@
     <main>
         <h1 class="heading-element">Home</h1>
         <div class="album">
-
+        <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <figcaption>Salt Lake City Utah Temple</figcaption>
+          </figure>
         </div>
     </main>
-    <footer class="footer"><p>©<span id="currentyear"></span> Eric Rafael Calado Ferreira - Brazil
+    <footer class="footer">
+        <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil
         <p>Last Modification <span id="modification"></span></p>
     </footer>
 </body>
