working around X button and why nav-links are showing automatically when the screen is on phone size

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -17,7 +17,14 @@
     <header>
         <nav class="navbar">
             <div class="brand">Temple Album</div>
-            <div class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <h1 class="x-button" id="x-button">X</h1>
+                
+            </div>
+            <div class="nav-links" id="nav-links">
                 <a href="#">Home</a>
                 <a href="#">Old</a>
                 <a href="#">New</a>
