--- a/week02/temples.html
+++ b/week02/temples.html
@@ -36,40 +36,40 @@
         <h1 class="heading-element">Home</h1>
         <div class="album">
         <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
+            <img src="images/phoenix-arizona.jpg" alt="Phoenix Arizona Temple">
+            <figcaption>Phoenix Arizona Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/sapporo.png" alt="Sapporo Japan Temple">
+            <figcaption>Sapporo Japan Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/mexico-temple.jpg" alt="Mexico City Temple">
+            <figcaption>Mexico City Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/birmingham-alabama-temple.png" alt="Birmingham Alabama Temple">
+            <figcaption>Birmingham Alabama Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/saratoga.jpeg" alt="Saratoga Springs Utah Temple">
+            <figcaption>Saratoga Springs Utah Temple</figcaption>
+          </figure>
+          <figure>
+            <img src="images/spokane-washington.jpg" alt="Spokane Washington Temple">
             <figcaption>Salt Lake City Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
+            <img src="images/provo-utah.jpg" alt="Provo Utah Temple">
+            <figcaption>Provo Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
+            <img src="images/tegucigalpa.png" alt="Tegucigalpa Honduras Temple">
+            <figcaption>Tegucigalpa Honduras Temple</figcaption>
           </figure>
           <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/salt-lake-temple.jpg" alt="Salt Lake City Utah Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
+            <img src="images/memphis.png" alt="Memphis Tennessee Temple">
+            <figcaption>Memphis Tennessee Temple</figcaption>
           </figure>
         </div>
     </main>
