changed images to webp for better performance, still having problems with hamburger

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -9,8 +9,9 @@
     <script src="scripts/temples.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>Temple Album WDD 131</title>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <h1 class="x-button" id="x-button">X</h1>
-                
+
             </div>
             <div class="nav-links" id="nav-links">
                 <a href="#">Home</a>
@@ -35,42 +36,42 @@
     <main>
         <h1 class="heading-element">Home</h1>
         <div class="album">
-        <figure>
-            <img src="images/phoenix-arizona.jpg" alt="Phoenix Arizona Temple">
-            <figcaption>Phoenix Arizona Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/sapporo.png" alt="Sapporo Japan Temple">
-            <figcaption>Sapporo Japan Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/mexico-temple.jpg" alt="Mexico City Temple">
-            <figcaption>Mexico City Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/birmingham-alabama-temple.png" alt="Birmingham Alabama Temple">
-            <figcaption>Birmingham Alabama Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/saratoga.jpeg" alt="Saratoga Springs Utah Temple">
-            <figcaption>Saratoga Springs Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/spokane-washington.jpg" alt="Spokane Washington Temple">
-            <figcaption>Salt Lake City Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/provo-utah.jpg" alt="Provo Utah Temple">
-            <figcaption>Provo Utah Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/tegucigalpa.png" alt="Tegucigalpa Honduras Temple">
-            <figcaption>Tegucigalpa Honduras Temple</figcaption>
-          </figure>
-          <figure>
-            <img src="images/memphis.png" alt="Memphis Tennessee Temple">
-            <figcaption>Memphis Tennessee Temple</figcaption>
-          </figure>
+            <figure>
+                <img src="images/phoenix.webp" alt="Phoenix Arizona Temple">
+                <figcaption>Phoenix Arizona Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/sapporo.webp" alt="Sapporo Japan Temple">
+                <figcaption>Sapporo Japan Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/mexico.webp" alt="Mexico City Temple">
+                <figcaption>Mexico City Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/birminghan.webp" alt="Birmingham Alabama Temple">
+                <figcaption>Birmingham Alabama Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/saratoga.webp" alt="Saratoga Springs Utah Temple">
+                <figcaption>Saratoga Springs Utah Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/spokane.webp" alt="Spokane Washington Temple">
+                <figcaption>Spokane Washington Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/provo-utah.webp" alt="Provo Utah Temple">
+                <figcaption>Provo Utah Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/tegucigalpa.webp" alt="Tegucigalpa Honduras Temple">
+                <figcaption>Tegucigalpa Honduras Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/memphis.webp" alt="Memphis Tennessee Temple">
+                <figcaption>Memphis Tennessee Temple</figcaption>
+            </figure>
         </div>
     </main>
     <footer class="footer">
