--- a/temples.html
+++ b/temples.html
@@ -31,6 +31,7 @@
                 <a href="#">New</a>
                 <a href="#">Large</a>
                 <a href="#">Small</a>
+            </div>
         </nav>
     </header>
     <main>
