added description and author

--- a/temples.html
+++ b/temples.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <description>WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131</description>
+    <author>Eric Ferreira</author>
     <title>Temple Album WDD 131</title>
 </head>
 
