--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131">
+    <meta name="author" content="Eric Ferreira">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
@@ -11,8 +13,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <description>WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131</description>
-    <author>Eric Ferreira</author>
     <title>Temple Album WDD 131</title>
 </head>
 
@@ -25,7 +25,6 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <h1 class="x-button" id="x-button">X</h1>
-
             </div>
             <div class="nav-links" id="nav-links">
                 <a href="#">Home</a>
@@ -78,7 +77,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil
+        <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
         <p>Last Modification <span id="modification"></span></p>
     </footer>
 </body>
