--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="brand">Temple Album</div>
+            <div class="brand">
+                <h1>Temple Album</h1>
+            </div>
             <div class="hamburger" id="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
