h1 tag in brand div/main

--- a/temples.html
+++ b/temples.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="heading-element">Home</h1>
+        <h1 class="heading-element">Temple</h1>
         <div class="album">
             <figure>
                 <img src="images/phoenix.webp" alt="Phoenix Arizona Temple">
