--- a/temples.html
+++ b/temples.html
@@ -42,39 +42,39 @@
         <div class="album">
             <figure>
                 <img src="images/phoenix.webp" alt="Phoenix Arizona Temple">
-                <figcaption>Phoenix Arizona Temple</figcaption>
+                <figcaption><h2>Phoenix Arizona Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/sapporo.webp" alt="Sapporo Japan Temple">
-                <figcaption>Sapporo Japan Temple</figcaption>
+                <figcaption><h2>Sapporo Japan Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/mexico.webp" alt="Mexico City Temple">
-                <figcaption>Mexico City Temple</figcaption>
+                <figcaption><h2>Mexico City Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/birminghan.webp" alt="Birmingham Alabama Temple">
-                <figcaption>Birmingham Alabama Temple</figcaption>
+                <figcaption><h2>Birmingham Alabama Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/saratoga.webp" alt="Saratoga Springs Utah Temple">
-                <figcaption>Saratoga Springs Utah Temple</figcaption>
+                <figcaption><h2>Saratoga Springs Utah Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/spokane.webp" alt="Spokane Washington Temple">
-                <figcaption>Spokane Washington Temple</figcaption>
+                <figcaption><h2>Spokane Washington Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/provo-utah.webp" alt="Provo Utah Temple">
-                <figcaption>Provo Utah Temple</figcaption>
+                <figcaption><h2>Provo Utah Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/tegucigalpa.webp" alt="Tegucigalpa Honduras Temple">
-                <figcaption>Tegucigalpa Honduras Temple</figcaption>
+                <figcaption><h2>Tegucigalpa Honduras Temple</h2></figcaption>
             </figure>
             <figure>
                 <img src="images/memphis.webp" alt="Memphis Tennessee Temple">
-                <figcaption>Memphis Tennessee Temple</figcaption>
+                <figcaption><h2>Memphis Tennessee Temple</h2></figcaption>
             </figure>
         </div>
     </main>
