capybara added, footer added, header added

--- a/week03/place.html
+++ b/week03/place.html
@@ -6,9 +6,19 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131">
     <meta name="author" content="Eric Ferreira">
     <link rel="stylesheet" href="styles/contry.css">
-    <title>Document</title>
+    <script src="scripts/contry.js" defer></script>
+    <title>WDD 131 Country</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Brazil</h1>
+    </header>
+    <section class="wallpaper">
+        <div class="capybara-img"></div>
+    </section>
+    <footer class="footer">
+        <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
+        <p>Last Modification <span id="modification"></span></p>
+    </footer>
 </body>
 </html>
