--- a/week03/place.html
+++ b/week03/place.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,38 @@
     <script src="scripts/contry.js" defer></script>
     <title>WDD 131 Country</title>
 </head>
+
 <body>
     <header>
         <h1>Brazil</h1>
     </header>
-    <section class="wallpaper">
-        <div class="capybara-img"></div>
-    </section>
+
+    <main class="content">
+        <div class="image-container">
+            <img src="images/capybara.webp" alt="Capybara" class="background-image">
+            <div class="data info">
+                <h2 class="data-card-header">Data</h2>
+                <p>Area: 8,514,877 sq km</p>
+                <p>Population: 215,319,093</p>
+                <p>Capital: Brasília</p>
+                <p>Languages: Portuguese</p>
+                <p>Currency: Brazilian Real</p>
+                <p>Time Zone: UTC-3</p>
+                <p>Calling Code: +55</p>
+                <p>Internet TLD: .br</p>
+            </div>
+
+            <div class="data weather">
+                <h2 class="data-card-header-weather">Weather</h2>
+                <p>Label: Value</p>
+                <p>Label: Value</p>
+            </div>
+        </div>
+    </main>
     <footer class="footer">
         <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
         <p>Last Modification <span id="modification"></span></p>
     </footer>
 </body>
+
 </html>
