weather emoji added

--- a/week03/place.html
+++ b/week03/place.html
@@ -42,6 +42,7 @@
 
             <div class="data weather">
                 <h2 class="data-card-header-weather">Weather</h2>
+                <h3 class="weather-emoji">🌤️</h3>
                 <p><strong>Temperature:</strong>10 °C</p>
                 <p><strong>Conditions:</strong> Mostly Cloudy</p>
                 <p><strong>Wind:</strong> +55</p>
