first attempt of lazy loading

--- a/week04/filtered-temples.html
+++ b/week04/filtered-temples.html
@@ -39,7 +39,7 @@
     <main>
         <h1 class="heading-element">Temple</h1>
         <h2 class="heading-element">Home</h2>
-        <div class="album"></div>
+        <div class="album" id="album"></div>
     </main>
     <footer class="footer">
         <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
