--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/siteplan.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <title>Workout Fitness Tracker</title>
 </head>
+
 <body>
     <h1>Site Name:</h1>
     <h2>Workout Pal</h2>
     <h3>Domain: track-work.org</h3>
     <p>This name represents a "Workout Pal" for people wanting to be healthier and stronger</p>
     <h1>Site Purpose</h1>
-    <p>This site provides a plethora of helpful tools for goal tracking, workout planning among other follow-up interactivites</p>
+    <p>This site provides a plethora of helpful tools for goal tracking, workout planning among other follow-up
+        interactivites</p>
     <h1>Scenarios</h1>
     <ul>
         <li>Which goals have I achieved ?</li>
@@ -19,9 +29,25 @@
         <li>How many calories I burned?</li>
     </ul>
     <h1>Color Schema</h1>
-    <div class="color-1"></div>
-    <div class="color-2"></div>
-    <div class="color-3"></div>
-    
+    <div class="color-1">
+        <h2>Federal Blue</h2>
+    </div>
+    <div class="color-2">
+        <h2>Celestial Blue</h2>
+    </div>
+    <div class="color-3">
+        <h2>Persian Blue</h2>
+    </div>
+    <picture>
+        <figcaption>
+            <h2>Palette Visualizer</h2>
+        </figcaption>
+        <img src="images/palette.png" alt="Palette Visualizer">
+    </picture>
+    <h1>Typography</h1>
+    <h2 class="font-1">Roboto</h2>
+    <h2 class="font-2">Poppins</h2>
+
 </body>
+
 </html>
