--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
     <title>Workout Fitness Tracker</title>
@@ -28,6 +28,10 @@
         <li>Which Workout Plan should I choose?</li>
         <li>How many calories I burned?</li>
     </ul>
+    <h1>Typography</h1>
+    <p>Roboto</p>
+    <p class="font-2">Poppins</p>
+    
     <h1>Color Schema</h1>
     <div class="color-1">
         <h2>Federal Blue</h2>
@@ -38,15 +42,28 @@
     <div class="color-3">
         <h2>Persian Blue</h2>
     </div>
+
     <picture>
         <figcaption>
             <h2>Palette Visualizer</h2>
         </figcaption>
-        <img src="images/palette.png" alt="Palette Visualizer">
+        <img src="images/palette.png" alt="Palette Visualizer" />
     </picture>
-    <h1>Typography</h1>
-    <h2 class="font-1">Roboto</h2>
-    <h2 class="font-2">Poppins</h2>
+
+    <div class="wireframes">
+        <picture>
+            <figcaption>
+                <h1>Desktop Wireframe</h1>
+            </figcaption>
+            <img src="images/wireframe.png" alt="wireframe-desktop" />
+        </picture>
+        <picture>
+            <figcaption>
+                <h1>Phone Wireframe</h1>
+            </figcaption>
+            <img src="images/wireframe-phone.png" alt="wireframe-desktop" />
+        </picture>
+    </div>
 
 </body>
 
