--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -46,7 +46,7 @@
         <figcaption>
             <h2>Palette Visualizer</h2>
         </figcaption>
-        <img src="images/palette.png" alt="Palette Visualizer" />
+        <img src="images/palette.png" alt="Palette Visualizer" loading="lazy"/>
     </picture>
 
     <div class="wireframes">
@@ -54,13 +54,13 @@
             <figcaption>
                 <h1>Desktop Wireframe</h1>
             </figcaption>
-            <img src="images/wireframe.png" alt="wireframe-desktop" />
+            <img src="images/wireframe.png" alt="wireframe-desktop" loading="lazy"/>
         </picture>
         <picture>
             <figcaption>
                 <h1>Phone Wireframe</h1>
             </figcaption>
-            <img src="images/wireframe-phone.png" alt="wireframe-desktop" />
+            <img src="images/wireframe-phone.png" alt="wireframe-desktop" loading="lazy"/>
         </picture>
     </div>
 
