changing alt image name

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -60,7 +60,7 @@
             <figcaption>
                 <h1>Phone Wireframe</h1>
             </figcaption>
-            <img src="images/wireframe-phone.png" alt="wireframe-desktop" loading="lazy"/>
+            <img src="images/wireframe-phone.png" alt="wireframe-phone" loading="lazy"/>
         </picture>
     </div>
 
