added date of installation and checkboxes

--- a/form.html
+++ b/form.html
@@ -53,6 +53,34 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <label for="install-date">Date of Installation</label>
+                <input type="date" id="install-date" name="install-date" required>
+            </div>
+
+            <div class="form-group">
+                <label>Which features did you find useful in the product?</label>
+                <p><em>(Check all that apply)</em></p>
+                <div class="features">
+                    <div class="feature-item">
+                        <input type="checkbox" id="durability" name="features" value="durability">
+                        <label for="durability">Durability</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="ease" name="features" value="ease">
+                        <label for="ease">Ease of Use</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="performance" name="features" value="performance">
+                        <label for="performance">Performance</label>
+                    </div>
+                    <div class="feature-item">
+                        <input type="checkbox" id="design" name="features" value="design">
+                        <label for="design">Design</label>
+                    </div>
+                </div>
+            </div>
+
             <footer class="footer">
                 <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
                 <p>Last Modification <span id="modification"></span></p>
