--- a/form.html
+++ b/form.html
@@ -81,10 +81,25 @@
                 </div>
             </div>
 
-            <footer class="footer">
-                <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
-                <p>Last Modification <span id="modification"></span></p>
-            </footer>
+
+
+            <div class="form-group">
+                <label for="review">Written Review <span class="optional">(Optional)</span></label>
+                <textarea id="review" name="review" rows="6"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="name">Your Name <span class="optional">(Optional)</span></label>
+                <input type="text" id="name" name="name">
+            </div>
+
+            <input type="submit" value="Post Review">
+        </form>
+    </div>
+    <footer class="footer">
+        <p>©<span id="currentyear"></span> ⭐ Eric Rafael Calado Ferreira ⭐ - Brazil</p>
+        <p>Last Modification <span id="modification"></span></p>
+    </footer>
 </body>
 
 </html>
