--- a/form.html
+++ b/form.html
@@ -10,8 +10,9 @@
     <script src="scripts/form.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
-    <title>WDD 131 Form - Eric Rafael Calado Ferreria</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>WDD 131 Product Review Form - Eric Rafael Calado Ferreria</title>
 </head>
 
 
