--- a/week06/index.html
+++ b/week06/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Workout Pal - Track Your Progress!</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles/styles.css">
+    <meta name="author" content="Eric Ferreira">
+
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <button class="Change Your Plan">Change Your Plan</button>
+            <div class="menu-nav">
+                <button class="menu-toggle">☰</button>
+                <ul class="nav-links">
+                    <li><a href="#goals">Goals</a></li>
+                    <li><a href="workout">Workout</a></li>
+                    <li><a href="#weight">Weight</a></li>
+                </ul>
+            </div>
+            <div class="nav-buttons">
+                <button class="sign-up">Sign-up</button>
+                <button class="calculators">Calculators</button>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
