--- a/week06/index.html
+++ b/week06/index.html
@@ -8,11 +8,15 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="author" content="Eric Ferreira">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;500;600&display=swap"
+        rel="stylesheet">
+</head>
 
 <body>
     <header>
         <nav class="navbar">
-            <button class="Change Your Plan">Change Your Plan</button>
+            <img src="images/logo-resized3.webp" alt="wokoutpal-logo" loading="lazy"/>
             <div class="menu-nav">
                 <button class="menu-toggle">☰</button>
                 <ul class="nav-links">
@@ -24,6 +28,7 @@
             <div class="nav-buttons">
                 <button class="sign-up">Sign-up</button>
                 <button class="calculators">Calculators</button>
+                <button class="change-plan">Change Your Plan</button>
             </div>
         </nav>
     </header>
