rounded logo corners, fixed some spacing issues

--- a/week06/index.html
+++ b/week06/index.html
@@ -15,13 +15,17 @@
 
 <body>
     <header>
+        <div class="logo-land">
+            <img src="images/logo-resized3.webp" alt="wokoutpal-logo" loading="lazy" class="logo"/>
+            <h1>Workout Pal</h1>
+        </div>
         <nav class="navbar">
-            <img src="images/logo-resized3.webp" alt="wokoutpal-logo" loading="lazy"/>
+            
             <div class="menu-nav">
                 <button class="menu-toggle">☰</button>
                 <ul class="nav-links">
                     <li><a href="#goals">Goals</a></li>
-                    <li><a href="workout">Workout</a></li>
+                    <li><a href="#workout">Workout</a></li>
                     <li><a href="#weight">Weight</a></li>
                 </ul>
             </div>
@@ -32,6 +36,19 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="welcome-land">
+            <h1>Welcome! <span id="userName">Friend!</span></h1>
+        </section>
+        <div class="dashboard">
+            <aside class="quotes">
+                <div class="motivational-quotes">
+                    <h2>Quotes</h2>
+                    <p id="quote">Your body can stand almost anything. It's your mind that you have to convince.</p>
+                </div>
+            </aside>
+        </div>
+    </main>
 </body>
 
 </html>
