main content and footer html and css added

--- a/week06/index.html
+++ b/week06/index.html
@@ -24,15 +24,15 @@
             <div class="menu-nav">
                 <button class="menu-toggle">☰</button>
                 <ul class="nav-links">
-                    <li><a href="#goals">Goals</a></li>
+                    
                     <li><a href="#workout">Workout</a></li>
                     <li><a href="#weight">Weight</a></li>
                 </ul>
             </div>
             <div class="nav-buttons">
-                <button class="sign-up">Sign-up</button>
-                <button class="calculators">Calculators</button>
                 <button class="change-plan">Change Your Plan</button>
+                <button class="calculators">Calculators</button>
+                <button class="sign-up">Sign-up</button>
             </div>
         </nav>
     </header>
@@ -47,8 +47,34 @@
                     <p id="quote">Your body can stand almost anything. It's your mind that you have to convince.</p>
                 </div>
             </aside>
+            <div class="main-content">
+                <section class="goals-section">
+                    <h2>Goals</h2>
+                    <div id="goals-list"></div>
+                    <button class="add-goal">+ Add New Goal</button>
+                </section>
+
+                <section class="workout-section">
+                    <h2>Workout</h2>
+                    <div id="current-workout"></div>
+                </section>
+
+                <section class="weight-section">
+                    <h2>Weight Tracking</h2>
+                    <div id="weight-chart"></div>
+                </section>
+
+                <section class="streak-section">
+                    <h2>Frequency/Streak</h2>
+                    <div id="streak-counter"></div>
+                </section>
+            </div>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2025 Workout Pal - track-work.org</p>
+        
+    </footer>
 </body>
 
 </html>
